<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/hotstarFragmetFragment"
        android:title="@string/hotstar" />

    <item
        android:id="@+id/netflixFragment"
        android:title="@string/netflix" />
</menu>